--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
-          GITHUB_TOKEN: ${{ secrets.profile_key }}
+          GITHUB_TOKEN: ${{ secrets.PROFILE_KEY }}
         with:
           USERNAME: ${{ github.repository_owner }}
