--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,14 +1,15 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule: # execute every 24 hours
-    - cron: "* */24 * * *"
+  schedule:
+    # Runs at 4am JST
+    - cron: '0 19 * * *' # ①
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    name: generate
+    runs-on: ubuntu-latest # ②
+    name: generate-github-profile-summary-cards
 
     steps:
       - uses: actions/checkout@v2
